Sunshine with Intents and shareactionprovider commit

--- a/Sunshine/app/src/main/res/values/strings.xml
+++ b/Sunshine/app/src/main/res/values/strings.xml
@@ -20,4 +20,5 @@
     <string name="temperature">temperature</string>
     <string name="maps">Open in Maps</string>
     <string name="mapview">View in maps</string>
+    <string name="share_action">Share</string>
 </resources>
