--- a/PopularMoviesI/app/src/main/res/values/strings.xml
+++ b/PopularMoviesI/app/src/main/res/values/strings.xml
@@ -9,7 +9,10 @@
     <string name="sortOrder">sortorder</string>
     <string name="defaultsort">highest</string>
     <string name="preferedsortorder_key">sort_order</string>
-    <string name="preferedsortorder_value">popular.desc</string>
-    <string name="popular">popular.desc</string>
+    <string name="preferedsortorder_value">popular.asc</string>
+    <string name="popular">popular.asc</string>
     <string name="highest">higest</string>
+    <string name="releaseDateLabel">Release Date :</string>
+    <string name="rating">Rating :</string>
+    <string name="movieTitle">Title :</string>
 </resources>
