--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-THis is my first commit
+Please run the application with your API_KEY from the themoviedb.org and placing it in the app/build.gradle file.
